name:                instant
version:             0.0.0.1
synopsis:            Instant language compiler (JVM & LLVM).
license:             MIT
license-file:        LICENSE
author:              Sebastian Kot
maintainer:          sk371043@students.mimuw.edu.pl
build-type:          Simple
cabal-version:       >=1.10

executable jvm
  main-is:             JVMCompiler.hs
  build-depends:       base >=4.6, array, containers, mtl, process, filepath
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
  Other-Modules:       Backend.AbsGrammar, Backend.ErrM, Backend.LexGrammar, Backend.ParGrammar, Frontend.JVM.JVMAnalyzer, Frontend.JVM.JVMConstants, Frontend.JVM.JVMDefinitions, Frontend.JVM.JVMUtils, Frontend.Utils.Formatter, Utils.Constants


executable llvm
  main-is:             LLVMCompiler.hs
  build-depends:       base >=4.6, array, containers, mtl, process, filepath
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
  Other-Modules:       Frontend.Utils.Formatter, Backend.AbsGrammar, Backend.ErrM, Backend.LexGrammar, Backend.ParGrammar, Frontend.LLVM.LLVMAnalyzer, Frontend.LLVM.LLVMConstants, Frontend.LLVM.LLVMDefinitions, Utils.Constants


